@@ -1,6 +1,6 @@
-% finds a matching tracking file in the current directory
 
 function fname = tracking_check(filename_root)
+% finds a matching tracking file in the current directory
     fname_array = [...
         cellstr('.raw.vrpn.evt.mat')...
         cellstr('.raw.vrpn.mat'),...
