@@ -1,6 +1,12 @@
+2013-05-10  Christian Stith <chstith@ncsu.edu>
+	* dmbr_multi_file_report.m: updated comments.
+	* dmbr_report_cell_expt.m: same.
+	* dmbr_adjust_breakpoint.m: same.
+	* dmbr_locate_trackfile: same.
+
 2013-04-01  Jeremy Cribb <jcribb@email.unc.edu>
-    * dmbr_locate_trackfile.m: added on the behalf os Christian Stith.  It finds a matching tracking file in the current directory.
-    * dmbr_adjust_breakpoint: added.  This changlog claims this file was added on 03-15 but when updating CVS has no knowledge of the function's existence.   Adding it now.
+	* dmbr_locate_trackfile.m: added on the behalf of Christian Stith.  It finds a matching tracking file in the current directory.
+	* dmbr_adjust_breakpoint: added.  This changlog claims this file was added on 03-15 but when updating CVS has no knowledge of the function's existence.   Adding it now.
 
 2013-03-15 Christian Stith <chstith@ncsu.edu>
     * dmbr_adjust_breakpoint: added. implements a breakpoint-changing function for use with multi-file report.
